added gwtp-hplace-sample and made it work, next step is adding push state